Add minor frontend change

--- a/layouts/main.twig
+++ b/layouts/main.twig
@@ -28,6 +28,7 @@
 
 <body>
 <div id="container">
+	{# AMOS can you fix this below too #}
 	{# {% set channels = craft.categories.group('channels') %}
 
 	{% set channelObject = [] %}
