Add minor frontend change

--- a/index.twig
+++ b/index.twig
@@ -2,6 +2,8 @@
 {{ void(this.beginBlock('content')) }}
 
 	{{ set(this, 'title', _Blog.getBlogTitle()) }}
+    {{this.registerJs("HomeController.listing();")}}
+
 	{% set limit = 20 %}
 	{% set articlesArr = _Blog.getBlogFeed({'limit': limit, 'offset': 0}) %}
 	{% set articles = articlesArr.articles %}
