--- a/layouts/elements/header.twig
+++ b/layouts/elements/header.twig
@@ -4,36 +4,7 @@
     <div class="header__heading header__container">
         <div class="header__heading-highlight"></div>
 
-        {#<!--{% if not  _User.isGuest() %}-->#}
-        {#<!--{% set user = _User.getUser() %}-->#}
-        <div id="header__menu">
-            <div class="user-dropdown__container">
-                <div class="user-dropdown__menu">
-                    <div class="user-dropdown__menu-profile">
-                        <div class="user-dropdown__menu-image" style="background-image:url('https://unsplash.it/80');background-position: 50% 50%;"></div>
-                        <div class="user-dropdown__menu-content">
-                            <div class="user-dropdown__menu-name">Amos Whitewolf</div>
-                            <div class="user-dropdown__menu-email">amoswhitewolf@gmail.com</div>
-                        </div>
-                    </div>
-                    <ul class="user-dropdown__menu-navigation">
-                        <li><a href="#" class="user-dropdown__menu-navigation-link">My News</a></li>
-                        <li><a class="user-dropdown__menu-navigation-link" href="#/profile/#">Profile</a></li>
-                        <li><a class="user-dropdown__menu-navigation-link" href="http://#/user/edit-profile">Settings</a></li>
-                        <li><a class="user-dropdown__menu-navigation-link sign-out" href="#">Sign Out</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        {#<!--{% else %}-->#}
-        {#<!--<div id="header__menu">-->#}
-        {#<!--<div class="profile__menu">-->#}
-        {#<!--<ul class="profile__menu-navigation">-->#}
-        {#<!--<li><a class="profile__menu-navigation-link" href="{{_AppHelper.getLoginUrl()}}">Sign up/Login</a></li>-->#}
-        {#<!--</ul>-->#}
-        {#<!--</div>-->#}
-        {#<!--</div>-->#}
-        {#<!--{% endif %}-->#}
+        {{ this.render('user-dropdown.twig') | raw }}
 
         <div class="header__heading-container">
             <div class="header__heading--left">
@@ -44,7 +15,7 @@
                 {#<!--{% endif %}-->#}
             </div>
             <div class="header__heading--right">
-                <div class="header__heading-link" id="login"><a href="/auth#login" class="login__link">Login</a> | <a href="/auth#sign-up" class="sign-up__link">Sign Up</a></div>
+                <div class="header__heading-link" id="login"><a href="{{_AppHelper.getLoginUrl()}}" class="login__link">Login</a> | <a href="{{_AppHelper.getLoginUrl()}}" class="sign-up__link">Sign Up</a></div>
                 <div class="header__heading-icons">
                     {#<!--{% set profileImage = ''%}-->#}
                     {#<!--{% if not _User.isGuest()%}-->#}
