--- a/layouts/elements/header.twig
+++ b/layouts/elements/header.twig
@@ -15,7 +15,7 @@
                 {#<!--{% endif %}-->#}
             </div>
             <div class="header__heading--right">
-                <div class="header__heading-link" id="login"><a href="{{_AppHelper.getLoginUrl()}}" class="login__link">Login</a> | <a href="{{_AppHelper.getLoginUrl()}}" class="sign-up__link">Sign Up</a></div>
+                <div class="header__heading-link" id="login"><a href="{{_AppHelper.getLoginUrl()}}" class="login__link test">Login</a> | <a href="{{_AppHelper.getLoginUrl()}}" class="sign-up__link">Sign Up</a></div>
                 <div class="header__heading-icons">
                     {#<!--{% set profileImage = ''%}-->#}
                     {#<!--{% if not _User.isGuest()%}-->#}
